tests/miniJava/pos/001297_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( 0 ) java [ 0 ] = 0 ; } }
