tests/miniJava/neg/004925_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , ] java ) { return 0 ; } }
